--- a/html/registertutor.html
+++ b/html/registertutor.html
@@ -245,9 +245,9 @@
                         <th data-column-id="id" data-width="3%" data-identifier="true" data-type="numeric">#</th>
                         <th data-column-id="day" data-width="5%">วัน</th>
                         <th data-column-id="StartTime" data-width="11%">เวลาเริ่มเดินทาง</th>
-                        <th data-column-id="endTime" data-width="11%">เวลาสิ้นสุดเดินทาง</th>
                         <th data-column-id="startPlace" data-width="15%">สถานที่เริ่มต้นเดินทาง</th>
-                        <th data-column-id="endPlace" data-width="15%">สถานที่สิ้นสุดเดินทาง</th>
+                        <th data-column-id="endTime" data-width="11%">เวลาที่ต้องการถึงสถานที่สุดท้ายของวัน</th>
+                        <th data-column-id="endPlace" data-width="15%">สถานที่สุดท้ายของวัน</th>
                         <th data-column-id="car" data-width="9%" data-sortable="false">รถยนต์ส่วนตัว</th>
                         <th data-column-id="bus" data-width="8%" data-sortable="false">รถประจำทาง</th>
                         <th data-column-id="bts" data-width="7%" data-sortable="false">รถไฟฟ้า</th>
