--- a/html/studentprofile.html
+++ b/html/studentprofile.html
@@ -60,7 +60,7 @@
                     <div class="form-group required">
                         <label for="txtTel" class="col-lg-2 labelform">เบอร์โทรมือถือ</label>
                         <div class="col-lg-4">
-                            <input type="text" class="form-control" id="txtTel">
+                            <input type="text" class="form-control" id="txtTel" pattern="^[0-9]*$" >
                         </div>
                         <div class="col-lg-6"></div>
                     </div>
