--- a/html/login.html
+++ b/html/login.html
@@ -34,7 +34,7 @@
                 <input class="form-control" id="txtLoginPassword" type="password">
             </div>
             <button type="button" class="btn btn-primary" id="btnLogin">Login</button>
-            <fb:login-button autologoutlink="true" onlogin="OnRequestPermission();">
+            <fb:login-button autologoutlink="true" onlogin="OnRequestPermission();" perms="user_about_me,email" scope="public_profile,email">
             </fb:login-button>
         </div>
     </div>
@@ -64,7 +64,18 @@
                 xfbml: true
             });
 
-            var status = FB.getLoginStatus();
+            FB.getLoginStatus(function (response) {
+                console.log('FB.getLoginStatus response=',response);
+                if (response.authResponse) {
+                    // logged in and connected user, someone you know
+                    console.log('you know this user!!');
+                    FBgetUserDetail();
+                } else {
+                    // no user session available, someone you dont know
+                    console.log('Howdy Stranger!');
+                }
+            });
+
 
             console.log(status);
         });
@@ -77,7 +88,7 @@
         });
 
         // Load the SDK asynchronously
-        
+
         function FBlogin() {
             FB.login(function (response) {
 
@@ -91,6 +102,18 @@
             FB.logout(function (response) {
                 // user is now logged out
             });
+        }
+
+        function OnRequestPermission(response) {
+            FBgetUserDetail();
+        }
+
+        function FBgetUserDetail() {
+            FB.api('/me', { locale: 'en_US', fields: 'email,first_name,last_name,birthday, link, gender, age_range' },
+                function (response) {
+                    console.log("response = ", response);
+                }
+            );
         }
 
 
