--- a/html/studentavatime.html
+++ b/html/studentavatime.html
@@ -2,7 +2,14 @@
 <html>
 
 <head>
-
+    <style>
+        table.scroll tbody {
+            width: 100%;
+            height: 300px;
+            overflow-y: auto;
+            /* overflow-x: hidden; */
+        }
+    </style>
 </head>
 
 <body>
@@ -25,11 +32,11 @@
     </div>
     <br>
     <div class="label-header">เวลาว่างของนักเรียน</div>
-    <button id="btnAddStuTime" type="button" class="btn btn-primary container-btn-add-right" data-toggle="modal" data-target="#modalTimeDetail">
+    <button id="btnAddStuTime" type="button" class="btn btn-primary container-btn-add-right btn-lg" data-toggle="modal" data-target="#modalTimeDetail">
         เพิ่ม
     </button>
 
-    <table id="gridStuTime" class="table table-condensed table-hover table-striped scroll">
+    <table id="gridStuTime" class="table table-condensed table-hover table-striped scroll" style="height: 300px;">
         <thead>
             <tr>
                 <th data-column-id="id" data-identifier="true" data-type="numeric" data-width="5%">#</th>
@@ -48,8 +55,8 @@
             <div class="form-group col-lg-12">
                 <div class="col-lg-4"></div>
                 <div class="col-lg-4">
-                    <button type="button" class="btn btn-primary" id="btnUpdateStudentTime">บันทึก</button>
-                    <button type="button" class="btn btn-secondary" href="javascript:loadMainPage();">ยกเลิก</button>
+                    <button type="button" class="btn btn-primary btn-lg" id="btnUpdateStudentTime">บันทึก</button>
+                    <button type="button" class="btn btn-secondary btn-lg" href="javascript:loadMainPage();">ยกเลิก</button>
                 </div>
                 <div class="col-lg-4"></div>
             </div>
@@ -100,8 +107,8 @@
                     </form>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-primary" id="btnSaveAddTime">ตกลง</button>
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">ยกเลิก</button>
+                    <button type="button" class="btn btn-primary btn-lg" id="btnSaveAddTime">ตกลง</button>
+                    <button type="button" class="btn btn-secondary btn-lg" data-dismiss="modal">ยกเลิก</button>
                 </div>
             </div>
         </div>
