--- a/html/tutorSubscription.html
+++ b/html/tutorSubscription.html
@@ -16,6 +16,7 @@
         </ol>
     </div>
     <br>
+
     <div class="alert alert-dismissible alert-success" style="display: none;">
         <button type="button" class="close" data-dismiss="alert">&times;</button>
         <strong>บันทึกข้อมูลสำเร็จ</strong>
@@ -86,7 +87,7 @@
                     <div class="form-group required">
                         <label for="txtTel" class="col-lg-2 labelform">เบอร์โทรมือถือ</label>
                         <div class="col-lg-4">
-                            <input type="text" class="form-control" id="txtTel"  pattern="^[0-9]*$" >
+                            <input type="text" class="form-control" id="txtTel" pattern="^[0-9]*$">
                         </div>
                         <div class="col-lg-6"></div>
                     </div>
@@ -118,7 +119,7 @@
                                 <div class="input-group-addon">
                                     <div class="fa fa-calendar-times-o"></div>
                                 </div>
-                                <input class="form-control" id="pickerBirthdate" name="date" placeholder="DD/MM/YYY" type="text" />
+                                <input class="form-control" id="pickerBirthdate" name="date" placeholder="DD/MM/YYYY" type="text" />
                             </div>
                         </div>
                         <div class="col-lg-6"></div>
@@ -164,7 +165,9 @@
         </p>
     </div>
     </div>
-    <br><br><br>
+    <br>
+    <br>
+    <br>
     <script>
         /*----------- PAGE 1 -------------*/
         var dataSex = [{
@@ -1026,6 +1029,11 @@
                     console.log(data.data);
                     _gHasTutorTime = data.data.hasTutorTime;
                     var msg = data.data.message;
+                    _gUser.turId = data.data.turId;
+                    _gUser.turName = data.data.turName;
+                    _gUserType = "tutor";
+
+                    jQuery("#divShowUser").html(_gUser.turName);
                     $(".alert-danger").hide();
                     $(".alert-success").show();
                     $(".alert-success").find("strong").text(msg);
